added features sections and minor fixes

--- a/index.html
+++ b/index.html
@@ -34,10 +34,30 @@
                 <div class="hero__info">
                     <h1 class="hero__title">Beautiful React Templates<p class="purple"> for you.</p></h1>
                     <p class="hero__description">Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components.</p>
+                    <div class="hero__container__email">
+                        <form action="" method="">
+                            <input class="hero__email" type="email" name="email" placeholder="Your Email Address" required="">     
+                            <button class="hero__button">Get Started</button>                     
+                        </form>
+                    </div>
+                    <div class="hero__customers">
+                        <p class="hero__customer_title">OUR TRUSTED CUSTOMERS</p>
+                        <img class="hero__customer_logos" src="/assets/customers-logo-strip.680ac7c2e8ae28161d2c.png" alt="Logo strip of customers">
+                    </div>
                 </div>
-                <figure class="hero__container_img">
+                <div class="hero__container_img">
                     <img class="hero__img" src="/assets/heroImage.svg" alt="Girl at desk">
-                </figure>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="features">
+        <div class="features__container">
+            <h5 class="section__name">FEATURES</h4>
+            <h2 class="features__title">We have Amazing <p class="purple">Service.</p></h1>
+            <p class="features__subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint natus veniam nostrum nobis eius recusandae a neque molestias eligendi debitis!</p>
+            <div class="services__container">
+
             </div>
         </div>
 
