--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="row">
             <div class="hero__container">
                 <div class="hero__info">
-                    <h1 class="hero__title">Beautiful React Templates<p class="purple"> for you.</p></h1>
+                    <h1 class="hero__title">Beautiful React Templates<span class="purple"> for you.</p></h1>
                     <p class="hero__description">Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components.</p>
                     <div class="hero__container__email">
                         <form action="" method="">
@@ -40,7 +40,7 @@
                             <button class="hero__button">Get Started</button>                     
                         </form>
                     </div>
-                    <div class="hero__customers">
+                    <div class="hero__customers section__name">
                         <p class="hero__customer_title">OUR TRUSTED CUSTOMERS</p>
                         <img class="hero__customer_logos" src="/assets/customers-logo-strip.680ac7c2e8ae28161d2c.png" alt="Logo strip of customers">
                     </div>
@@ -53,11 +53,65 @@
     </section>
     <section id="features">
         <div class="features__container">
-            <h5 class="section__name">FEATURES</h4>
-            <h2 class="features__title">We have Amazing <p class="purple">Service.</p></h1>
-            <p class="features__subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint natus veniam nostrum nobis eius recusandae a neque molestias eligendi debitis!</p>
+            <h5 class="section__name purple">FEATURES</h4>
+            <h2 class="features__title">We have Amazing <span class="purple">Service.</p></h2>
+            <p class="features__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, libero cum! Sint, ex iure sit non expedita voluptates. Autem, eveniet.</p>
+            <div class="vertical_spacer"></div>
             <div class="services__container">
-
+                <div class="service__containers">
+                    <span class="service__icons">
+                        <img src="/assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg">
+                    </span>
+                    <div class="service__info">
+                        <span class="service__title">Secure</span>
+                        <p class="service__description">We strictly only deal with vendors that provide top notch security.</p>
+                    </div>
+                </div>
+                <div class="service__containers">
+                    <span class="service__icons">
+                        <img src="/assets/simple-icon.673b7e1750b2a4ef32907fc164828d00.svg">
+                    </span>
+                    <div class="service__info">
+                        <span class="service__title">24/7 Support</span>
+                        <p class="service__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, dolorum quasi?</p>
+                    </div>
+                </div>
+                <div class="service__containers">
+                    <span class="service__icons">
+                        <img src="/assets/customize-icon.367468c90fd796009b97fbfba67b2c6a.svg">
+                    </span>
+                    <div class="service__info">
+                        <span class="service__title">Customizable</span>
+                        <p class="service__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, aliquam aperiam!</p>
+                    </div>
+                </div>
+                <div class="service__containers">
+                    <span class="service__icons">
+                        <img src="/assets/reliable-icon.1367510a8f0a1bec76dc425d25f92f43.svg">
+                    </span>
+                    <div class="service__info">
+                        <span class="service__title">Reliable</span>
+                        <p class="service__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, tempora earum.</p>
+                    </div>
+                </div>
+                <div class="service__containers">
+                    <span class="service__icons">
+                        <img src="/assets/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg">
+                    </span>
+                    <div class="service__info">
+                        <span class="service__title">Fast</span>
+                        <p class="service__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor, ut saepe!</p>
+                    </div>
+                </div>
+                <div class="service__containers">
+                    <span class="service__icons">
+                        <img src="/assets/simple-icon.673b7e1750b2a4ef32907fc164828d00.svg">
+                    </span>
+                    <div class="service__info">
+                        <span class="service__title">Easy</span>
+                        <p class="service__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, fugit voluptatem?</p>
+                    </div>
+                </div>
             </div>
         </div>
 
