fixing minor issues added new section

--- a/index.html
+++ b/index.html
@@ -52,69 +52,85 @@
         </div>
     </section>
     <section id="features">
-        <div class="features__container">
-            <h5 class="section__name purple">FEATURES</h4>
-            <h2 class="features__title">We have Amazing <span class="purple">Service.</p></h2>
-            <p class="features__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, libero cum! Sint, ex iure sit non expedita voluptates. Autem, eveniet.</p>
-            <div class="vertical_spacer"></div>
-            <div class="services__container">
-                <div class="service__containers">
-                    <span class="service__icons">
-                        <img src="/assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg">
-                    </span>
-                    <div class="service__info">
-                        <span class="service__title">Secure</span>
-                        <p class="service__description">We strictly only deal with vendors that provide top notch security.</p>
+        <div class="row">
+            <div class="features__container">
+                <h5 class="section__name purple">FEATURES</h4>
+                <h2 class="features__title">We have Amazing <span class="purple">Service.</p></h2>
+                <p class="features__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, libero cum! Sint, ex iure sit non expedita voluptates. Autem, eveniet.</p>
+                <div class="vertical_spacer"></div>
+                <div class="services__container">
+                    <div class="service__containers">
+                        <span class="service__icons">
+                            <img src="/assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg">
+                        </span>
+                        <div class="service__info">
+                            <span class="service__title">Secure</span>
+                            <p class="service__description">We strictly only deal with vendors that provide top notch security.</p>
+                        </div>
                     </div>
-                </div>
-                <div class="service__containers">
-                    <span class="service__icons">
-                        <img src="/assets/simple-icon.673b7e1750b2a4ef32907fc164828d00.svg">
-                    </span>
-                    <div class="service__info">
-                        <span class="service__title">24/7 Support</span>
-                        <p class="service__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, dolorum quasi?</p>
+                    <div class="service__containers">
+                        <span class="service__icons">
+                            <img src="/assets/simple-icon.673b7e1750b2a4ef32907fc164828d00.svg">
+                        </span>
+                        <div class="service__info">
+                            <span class="service__title">24/7 Support</span>
+                            <p class="service__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, dolorum quasi?</p>
+                        </div>
                     </div>
-                </div>
-                <div class="service__containers">
-                    <span class="service__icons">
-                        <img src="/assets/customize-icon.367468c90fd796009b97fbfba67b2c6a.svg">
-                    </span>
-                    <div class="service__info">
-                        <span class="service__title">Customizable</span>
-                        <p class="service__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, aliquam aperiam!</p>
+                    <div class="service__containers">
+                        <span class="service__icons">
+                            <img src="/assets/customize-icon.367468c90fd796009b97fbfba67b2c6a.svg">
+                        </span>
+                        <div class="service__info">
+                            <span class="service__title">Customizable</span>
+                            <p class="service__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, aliquam aperiam!</p>
+                        </div>
                     </div>
-                </div>
-                <div class="service__containers">
-                    <span class="service__icons">
-                        <img src="/assets/reliable-icon.1367510a8f0a1bec76dc425d25f92f43.svg">
-                    </span>
-                    <div class="service__info">
-                        <span class="service__title">Reliable</span>
-                        <p class="service__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, tempora earum.</p>
+                    <div class="service__containers">
+                        <span class="service__icons">
+                            <img src="/assets/reliable-icon.1367510a8f0a1bec76dc425d25f92f43.svg">
+                        </span>
+                        <div class="service__info">
+                            <span class="service__title">Reliable</span>
+                            <p class="service__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, tempora earum.</p>
+                        </div>
                     </div>
-                </div>
-                <div class="service__containers">
-                    <span class="service__icons">
-                        <img src="/assets/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg">
-                    </span>
-                    <div class="service__info">
-                        <span class="service__title">Fast</span>
-                        <p class="service__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor, ut saepe!</p>
+                    <div class="service__containers">
+                        <span class="service__icons">
+                            <img src="/assets/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg">
+                        </span>
+                        <div class="service__info">
+                            <span class="service__title">Fast</span>
+                            <p class="service__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor, ut saepe!</p>
+                        </div>
                     </div>
-                </div>
-                <div class="service__containers">
-                    <span class="service__icons">
-                        <img src="/assets/simple-icon.673b7e1750b2a4ef32907fc164828d00.svg">
-                    </span>
-                    <div class="service__info">
-                        <span class="service__title">Easy</span>
-                        <p class="service__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, fugit voluptatem?</p>
+                    <div class="service__containers">
+                        <span class="service__icons">
+                            <img src="/assets/simple-icon.673b7e1750b2a4ef32907fc164828d00.svg">
+                        </span>
+                        <div class="service__info">
+                            <span class="service__title">Easy</span>
+                            <p class="service__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, fugit voluptatem?</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-
+    </section>
+    <section id="quality_work">
+        <div class="row">
+            <div class="quality__container">
+                <div class="quality__info_container">
+                    <span class="section__name purple">QUALITY WORK</span>
+                    <h2 class="quality__title">Designed & Developped by <span class="purple">Professionals.</span></h2>
+                    <span class="quality__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia quaerat odit eligendi facilis dolore fuga molestias aliquam ipsa, ipsum cumque dicta possimus excepturi magni ut.</span>
+                    <button class="quality__button">Learn More</button>
+                </div>
+                <div class="quality__img_container">
+                    <img class="quality__img" src="/assets/hero-screenshot-1.40a097b525c2f8c9808e.png">
+                </div>
+            </div>
+        </div>
     </section>
 
 
